Сделал всплывающее окно в SignUp.jsx для введения кода, пришедшего на почту. В контроллере AuthController.php добавил один небольшой метод, проверяющий корректность введённых данных в регистрации и добавил к нему документацию.
